# mashtots

./: .gitignore  EDA.ipynb  README.md  env.example  main.py  predict.py  pyproject.toml  train.py
configs/: test_config.yaml  train_config.yaml
scripts/: model.py  serialized_model.py  test_config.py  train_config.py
scripts/data/: data_module.py  dataset.py  kaggle_download.py
scripts/utils/: callbacks.py  modules.py  plots.py  reproducibility.py  results_saving.py  transforms.py
