[project]
name = "mashtots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.3",
    "mlflow>=3.0",
    "onnxruntime>=1.27.0",
    "opencv-python==4.11.0.86",
    "pydantic>=2.0",
    "seaborn>=0.13.2",
    "torch==2.10.0",
    "lightning",
    "torchvision>=0.20.1",
    "kaggle>=2.2.3",
    "onnxscript>=0.7.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
